{
  "version": 4,
  "terraform_version": "1.14.5",
  "serial": 13,
  "lineage": "9792e7cb-9e6d-f632-3c4b-36fc80cba433",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "lcl_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0199fa5fada510433",
            "arn": "arn:aws:ec2:us-east-1:227978207772:instance/i-0973ece9361385748",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0973ece9361385748",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "sri_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0cbbc9aead4713a79"
              }
            ],
            "primary_network_interface_id": "eni-0cbbc9aead4713a79",
            "private_dns": "ip-10-0-0-246.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.246",
            "public_dns": "ec2-44-203-46-126.compute-1.amazonaws.com",
            "public_ip": "44.203.46.126",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00f44ae5037f8ecd1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-011af58466b6828a7",
            "tags": {
              "name": "Cloud-portfolio-sridurai-ec2"
            },
            "tags_all": {
              "name": "Cloud-portfolio-sridurai-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c8aa48577ad1ce28"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "227978207772",
            "id": "i-0973ece9361385748",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.lcl_sg",
            "aws_subnet.lcl_subnet_sri",
            "aws_vpc.lcl_vpc_sri",
            "data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "lcl_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:227978207772:internet-gateway/igw-0f71343c0365ef1fa",
            "id": "igw-0f71343c0365ef1fa",
            "owner_id": "227978207772",
            "region": "us-east-1",
            "tags": {
              "name": "sri-public-subnet-igw"
            },
            "tags_all": {
              "name": "sri-public-subnet-igw"
            },
            "vpc_id": "vpc-06c0bdf7af4915391"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.lcl_vpc_sri"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "lcl_route_table_sri",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:227978207772:route-table/rtb-08b383f669fb2df92",
            "id": "rtb-08b383f669fb2df92",
            "owner_id": "227978207772",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f71343c0365ef1fa",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "name": "sri-route-table"
            },
            "tags_all": {
              "name": "sri-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-06c0bdf7af4915391"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "227978207772",
            "id": "rtb-08b383f669fb2df92",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.lcl_igw",
            "aws_vpc.lcl_vpc_sri"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "lcl_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0837deefe06f4b87e",
            "region": "us-east-1",
            "route_table_id": "rtb-08b383f669fb2df92",
            "subnet_id": "subnet-011af58466b6828a7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.lcl_igw",
            "aws_route_table.lcl_route_table_sri",
            "aws_subnet.lcl_subnet_sri",
            "aws_vpc.lcl_vpc_sri"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lcl_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:227978207772:security-group/sg-0c8aa48577ad1ce28",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c8aa48577ad1ce28",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "103.158.255.200/32"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sri-sg",
            "name_prefix": "",
            "owner_id": "227978207772",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06c0bdf7af4915391"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "227978207772",
            "id": "sg-0c8aa48577ad1ce28",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.lcl_vpc_sri"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "lcl_subnet_sri",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:227978207772:subnet/subnet-011af58466b6828a7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-011af58466b6828a7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "227978207772",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "name": "sri-public-subnet"
            },
            "tags_all": {
              "name": "sri-public-subnet"
            },
            "vpc_id": "vpc-06c0bdf7af4915391"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "227978207772",
            "id": "subnet-011af58466b6828a7",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.lcl_vpc_sri"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "lcl_vpc_sri",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:227978207772:vpc/vpc-06c0bdf7af4915391",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a7e317705e4adc52",
            "default_route_table_id": "rtb-01d54f9c97592bc33",
            "default_security_group_id": "sg-08311c3ed7d76cc21",
            "dhcp_options_id": "dopt-0239a8ccc6146242b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06c0bdf7af4915391",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01d54f9c97592bc33",
            "owner_id": "227978207772",
            "region": "us-east-1",
            "tags": {
              "name": "cloud_portfolio_vpc_sridurai"
            },
            "tags_all": {
              "name": "cloud_portfolio_vpc_sridurai"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "227978207772",
            "id": "vpc-06c0bdf7af4915391",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}